--- a/action.yaml
+++ b/action.yaml
@@ -53,6 +53,11 @@ inputs:
     description: Secret access key
     required: false
 
+  cors_domain:
+    description: CORS Domain allowed
+    required: false
+    default: "*"
+
 
   
 
